[package]
name = "crabby_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
byte-pool = "0.2.4"
chrono = "0.4.41"
lazy_static = "1.5.0"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4"] }
